@@ -36,6 +36,18 @@ The source is to be downloaded from GitHub in two steps: by creating a local clo
   * In **Branch Selection** windows, 
     * check the master branch 
     * Next
+    * Note: If you are using Ubuntu 16 and you did not find any branch in this windows, may be your eclipse has a bug related with the OS. The workaround should be: 
+        * Close eclipse
+        * Open eclipse.ini
+        * Add these 2 lines before **--launcher.appendVmargs**:
+
+        --launcher.GTK_version   
+        2
+        * Change required version of java from : -Dosgi.requiredJavaVersion=1.7 into -Dosgi.requiredJavaVersion=1.8
+        * Remove this line: -XX:MaxPermSize=256m
+        * Save and close eclipse.ini
+        * Start eclipse and redo from step 1
+
 ![Git branch selection](resources/images/developpingExtension/GIT_branch_selection.png)
   * In **Local Destination** windows,
     * Choose a Directory (where the source files will be downloaded).
